--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Half King — Custom Surfboards & Fins</title>
-    <meta name="description" content="Half King — Custom surfboards and fins handcrafted in Canggu, Bali." />
-    <meta name="author" content="Half King" />
+    <title>DC surf shop — Surfboards, Rentals & Lessons in Lombok</title>
+    <meta name="description" content="DC surf shop — Surfboards, rentals and lessons in Kuta, Lombok." />
+    <meta name="author" content="DC surf shop" />
 
-    <meta property="og:title" content="Half King — Custom Surfboards & Fins" />
-    <meta property="og:description" content="Custom surfboards and fins handcrafted in Canggu, Bali." />
+    <meta property="og:title" content="DC surf shop — Surfboards, Rentals & Lessons in Lombok" />
+    <meta property="og:description" content="Surfboards, rentals and lessons in Kuta, Lombok." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/images/maxresdefault.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@halfking_surf" />
     <meta name="twitter:image" content="/images/maxresdefault.jpg" />
   </head>
 
